# cqptoolkit

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Coding.md  Contribution.md  DemoHowto.md  Doxyfile.in  FAQ.md  GtkToCpp.xslt  NOTICE.md  README.md  SiteAgentA.json  SiteAgentB.json  SiteAgentC.json  StartCQPImage.sh  TLS.md  TunnelControllerA.json  TunnelControllerB.json  Tunnels.md  Walkthrough.md  dummy-a.json  dummy-b.json  general.astylerc  header.template  makepaper.sh  packages.config  paper.bib  paper.md  proto2cpp.py  run-dummy-driver-ssh-tunnel.note  run-dummy-driver.note  setup.py  siteagent-a.json  siteagent-b.json  siteagent-tunnel-setup.md
CMakeModules/: postinst  (+19 more)
src/: CMakeLists.txt  LICENSE  NOTICE  Version.cpp.in  Version.h  cqp.cppcheck  targetver.h
src/Algorithms/: CMakeLists.txt
src/Algorithms/Alignment/: AlignmentTypes.h  Drift.cpp  Drift.h  Filter.cpp  Filter.h  Gating.cpp  Gating.h  Offsetting.cpp  Offsetting.h
src/Algorithms/Datatypes/: Base.h  Chrono.h  ConcurrentQueue.h  DetectionReport.h  Framing.h  Keys.h  Privacy.h  QKDParameters.h  Qubits.h  RingBuffer.h  URI.cpp  URI.h  UUID.cpp  UUID.h  Units.h
src/Algorithms/Logging/: ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  ILogger.h  Logger.cpp  Logger.h
src/Algorithms/Net/: DNS.cpp  DNS.h
src/Algorithms/Random/: IRandom.h  RandomNumber.cpp  RandomNumber.h
src/Algorithms/Statistics/: IStatistics.h  Stat.cpp  Stat.h  StatCollection.h  StatisticsLogger.cpp  StatisticsLogger.h
src/Algorithms/Util/: Application.cpp  Application.h  CommandArgs.cpp  CommandArgs.h  DataFile.cpp  DataFile.h  Env.cpp  Env.h  Event.h  FileIO.cpp  FileIO.h  Hash.cpp  Hash.h  Maths.h  PortableEndian.h  Process.cpp  Process.h  ProcessingQueue.cpp  ProcessingQueue.h  Provider.h  RangeProcessing.cpp  RangeProcessing.h  SecureErase.cpp  SecureErase.h  Strings.cpp  Strings.h  Threading.cpp  Threading.h  WorkerThread.cpp  WorkerThread.h
src/CQPAlgorithms/: CMakeLists.txt
src/CQPAlgorithms/Datatypes/: Base.h  DetectionReport.h  Framing.h  Keys.h  Privacy.h  Qubits.h  RingBuffer.hpp  Services.h  UUID.h
src/CQPAlgorithms/Logging/: ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  ILogger.h  Logger.h
src/CQPAlgorithms/Random/: IRandom.h  RandomNumber.h
src/CQPAlgorithms/Statistics/: Stat.cpp  Stat.h  StatCollection.h  StatisticsLogger.h
src/CQPAlgorithms/Util/: Application.h  CommandArgs.cpp  CommandArgs.h  DataFile.cpp  DataFile.h  Env.cpp  Env.h  Event.h  FileIO.cpp  FileIO.h  Process.cpp  Process.h  Strings.cpp  Strings.h  WorkerThread.cpp  WorkerThread.h
src/CQPToolkit/: Adaptors.md  CMakeLists.txt  KeyNegotiationProtocol.md  OpenSSLHandler.cpp  OpenSSLHandler.h  Postprocessing.md
src/CQPToolkit/Alignment/: Alignment.cpp  Alignment.h  DetectionGating.cpp  DetectionGating.h  DetectionReciever.cpp  DetectionReciever.h  Histogram.cl  NullAlignment.cpp  NullAlignment.h  Stats.h  TransmissionHandler.cpp  TransmissionHandler.h
src/CQPToolkit/Auth/: AuthUtil.cpp  AuthUtil.h
src/CQPToolkit/Datatypes/: Base.h  DetectionReport.h  Framing.h  Keys.h  QKDParameters.h  Qubits.h  Services.h  Tunnels.h  privacy.h
src/CQPToolkit/Drivers/: Clavis.cpp  Clavis.h  ClavisProxy.cpp  ClavisProxy.h  DeviceFactory.cpp  DeviceFactory.h  DummyQKD.cpp  DummyQKD.h  IDQSequenceLauncher.cpp  IDQSequenceLauncher.h  LEDAliceMk1.cpp  LEDAliceMk1.h  LEDDriver.cpp  LEDDriver.h  PhotonDetectorMk1.cpp  PhotonDetectorMk1.h  Serial.cpp  Serial.h  Serial_Unix.cpp  Serial_Win32.cpp  Usb.cpp  Usb.h  UsbTagger.cpp  UsbTagger.h
src/CQPToolkit/ErrorCorrection/: ErrorCorrection.cpp  ErrorCorrection.h  Stats.h
src/CQPToolkit/Interfaces/: IAlignmentPublisher.h  IBackingStore.h  IDetectionEventPublisher.h  IEmitterEventPublisher.h  IErrorCorrectPublisher.h  IEvent.h  IKeyPublisher.h  IKeyReceiver.h  IKeyStore.h  IKeyTransmitter.h  ILogger.h  IPhotonGenerator.h  IProtocolEvent.h  IQKDDevice.h  IRandom.h  IRemoteComms.h  IService.h  ISessionCallback.h  ISessionController.h  ISiftedPublisher.h  Interfaces.md
src/CQPToolkit/KeyGen/: BackingStoreFactory.cpp  BackingStoreFactory.h  FileStore.cpp  FileStore.h  HSMStore.cpp  HSMStore.h  KeyConverter.cpp  KeyConverter.h  KeyStore.cpp  KeyStore.h  KeyStoreFactory.cpp  KeyStoreFactory.h  PKCS11Wrapper.cpp  PKCS11Wrapper.h  SiteAgent.cpp  SiteAgent.h  Stats.h  YubiHSM.cpp  YubiHSM.h
src/CQPToolkit/Net/: DNS.cpp  DNS.h  Datagram.cpp  Datagram.h  Device.cpp  Device.h  HTTPClientSession.cpp  HTTPClientSession.h  Interface.cpp  Interface.h  Server.cpp  Server.h  ServiceDiscovery.cpp  ServiceDiscovery.h  Socket.cpp  Socket.h  Stream.cpp  Stream.h  TwoWayServerConnector.cpp  TwoWayServerConnector.h
src/CQPToolkit/PrivacyAmp/: PrivacyAmplify.cpp  PrivacyAmplify.h  Stats.h
src/CQPToolkit/QKDDevices/: ClavisProxy.cpp  ClavisProxy.h  DeviceAdaptor.cpp  DeviceAdaptor.h  DeviceFactory.cpp  DeviceFactory.h  DeviceUtils.cpp  DeviceUtils.h  DummyQKD.cpp  DummyQKD.h  LEDAliceMk1.cpp  LEDAliceMk1.h  PhotonDetectorMk1.cpp  PhotonDetectorMk1.h  RemoteQKDDevice.cpp  RemoteQKDDevice.h
src/CQPToolkit/SDN/: NetworkManagerDummy.cpp  NetworkManagerDummy.h  QuantomPathDummy.cpp  QuantomPathDummy.h  SDNLink.cpp  SDNLink.h
src/CQPUI/: CMakeLists.txt  HSMPinDialog.cpp  HSMPinDialog.h  OpenSSLKeyUI.cpp  OpenSSLKeyUI.h  OpenSSLKeyUI.ui
src/Drivers/: CMakeLists.txt
src/Examples/: CMakeLists.txt
src/IDQDevices/: CMakeLists.txt
src/KeyManagement/: CMakeLists.txt  OpenSSLHandler.cpp  OpenSSLHandler.h
src/Networking/: CMakeLists.txt
src/QKDInterfaces/: CMakeLists.txt  Device.proto  IAlignment.proto  IDetector.proto  IDevice.proto  IIDQWrapper.proto  IKey.proto  IKeyFactory.proto  INetworkManager.proto  IPhotonSim.proto  IPrivacyAmplify.proto  IPublicKey.proto  IQuantumPath.proto  ISession.proto  ISift.proto  ISiteAgent.proto  ISiteDetails.proto  ITransfer.proto  ITunnelServer.proto  Keys.proto  Messages.proto  Qubits.proto  Reporting.proto  Site.proto  Tunnels.proto
src/Tools/: CMakeLists.txt
src/UI/: CMakeLists.txt
src/tests/: CMakeLists.txt  README.md  TestExecution.sh
(+433 files in other folders)
